style tweaks and rewrite about me

--- a/max-site/src/components/shared/photoGallery.module.scss
+++ b/max-site/src/components/shared/photoGallery.module.scss
@@ -35,6 +35,7 @@
     right: 0;
     position: absolute;
     visibility: hidden;
+    border-radius: 5px;
     padding: 0.2em 0.4em 0.4em 0.4em;
   }
 }
